# finlearn-tutor

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_graders.py  test_integration.py
env/: __init__.py  environment.py  feedback.py  market.py  metrics.py  models.py  rewards.py  tasks.py
frontend/: README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/dashboard/: ActionLog.tsx  AllocationPie.tsx  ControlPanel.tsx  DashboardHeader.tsx  KpiCards.tsx  PortfolioChart.tsx  RewardChart.tsx  RiskPanel.tsx
frontend/src/lib/: finlearn-engine.ts
frontend/src/pages/: Index.tsx
server/: app.py
